tests/fixtures/invalid/str_rshift_bytes.py
# Cannot right shift Str and Bytes
x: str = "hello" >> b"hello"
